Fix layout issues, ensuring page height collapses correctly

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -6,8 +6,10 @@ $transition: all 0.15s ease-out;
 .main {
   background: var(--mm-color-background);
   display: grid;
+  flex: 1 1 auto;
   grid-template-areas: 'article sidebar';
   grid-template-columns: 100vw var(--mm-layout-sidebar-width);
+  grid-template-rows: 100%;
   transition: $transition;
 }
 
